[package]
name = "btcore"
version = "0.1.0"
edition = "2021"

[dependencies]
bitcoin = { version= "0.30.0", features = ["std"], default-features = false }
bitcoincore-rpc = { version = "0.17.0", default-features = false }
tokio = { version = "1.12.0", features = ["rt", "macros"], default-features = false }
tracing = { version = "0.1.37", default-features = false }
