[package]
name = "btcore"
version = "0.1.0"
edition = "2021"

[dependencies]
bitcoin = { version= "0.32.0", features = ["std"], default-features = false }
bitcoincore-rpc = { version = "0.19.0", default-features = false }
opentelemetry = { version = "0.26.0", features = ["trace"], default-features = false }
tokio = { version = "1.12.0", features = ["rt", "macros"], default-features = false }
